# mterm

./: README.md  android_env.sh  auto_delete_generated.sh  index.html  package.json  tailwind.config.js  update_logo.sh  vite.config.js  vite_md_plugin.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lib/upload/: Cargo.toml
src-tauri/lib/upload/src/: lib.rs
src-tauri/src/: command.rs  lib.rs  main.rs
src/components/drawer/: drawer-item.vue  drawer.vue  drawer_item.vue
src/components/my_dialog/: my_dialog.js  my_dialog.vue
src/components/navbar/: navbar.vue
src/components/term_view/: term_view.vue  term_view_config.js
src/components/toast/: toast.js  toast.vue  toast_item.vue
src/components/virtual_keyboard/: virtual_keyboard.vue
src/pages/: aboutPage.vue  about_page.vue  init_page.vue  settingPage.vue  setting_page.vue  termPage.vue  term_page.vue
src/router/: index.js
src/utils/: keyboard.js  term.js  term_manager.js  term_view_config.js  theme.js
