[package]
name = "tauri-plugin-upload"
version = "2.0.0-alpha.5"
description = "Upload files from disk to a remote server over HTTP."
edition = "2021"
rust-version = "1.70"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = "2.0.0-alpha.18"
tauri-build = "2.0.0-alpha.12"
serde_json = "1"
thiserror = "1"
url = "2"
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
] }
futures-util = "0.3"
read-progress-stream = "1.0.0"

[features]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
